# slothunter-dev-bot

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  auth.py  bot.py  chunker.py  claude_session.py  config.py  digest.py  git_sync.py  history.py  logging.py  main.py  md_to_tg.py  permissions.py  scheduler.py  transcribe.py  triggers.py
notes/: ROADMAP.md  decisions.md
scripts/: deploy.sh  dev-bot-crash-notify.service  dev-bot-watchdog.service  dev-bot-watchdog.sh  dev-bot-watchdog.timer  dev-bot.service  install_playwright.sh
