[project]
name = "slothunter-dev-bot"
version = "0.1.0"
description = "Telegram-bot wrapper around Claude Code — single-user remote dev for Slot Hunter BY"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13.0",
    "claude-agent-sdk>=0.1.0",
    "pydantic-settings>=2.6.0",
    "structlog>=25.0.0",
]

[project.scripts]
dev-bot = "app.main:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C4", "SIM", "UP"]
# Cyrillic strings throughout — disable the unicode-confusables warnings.
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = "claude_agent_sdk.*"
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "ruff>=0.15.12",
]
